# rs-avro-agg-count-merge

./: Cargo.toml  README.md  build-wasi.sh  doc-web.sh  rs-avro-agg-count-merge  run.sh
sample.d/: output.avsc  sample.avsc  sample1.avro  sample1.jsonl  sample2.avro  sample2.jsonl
src/: lib.rs  main.rs  stat.rs  wtr.rs
